--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "esModuleInterop": true,
         "outDir": "dist"
     },
-    "include": ["src/index.ts"],
+    "include": ["src/main.ts"],
     "exclude": ["node_modules"]
 }
 
